Added Blue, Red, Green Dancer functionality.  Updated background

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,9 +14,13 @@
       window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
     });
   </script>
-  <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/redDancerSpec.js"></script>
+  <script src="spec/blueDancerSpec.js"></script>
+  <script src="spec/greenDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
-  <script src="src/blinkyDancer.js"></script>
+  <script src="src/redDancer.js"></script>
+  <script src="src/blueDancer.js"></script>
+  <script src="src/greenDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
