--- a/dancefloor.html
+++ b/dancefloor.html
@@ -5,12 +5,16 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
-    <script src="src/blinkyDancer.js"></script>
+    <script src="src/redDancer.js"></script>
+    <script src="src/blueDancer.js"></script>
+    <script src="src/greenDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRedDancer">Add Red Dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlueDancer">Add Blue Dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeGreenDancer">Add Green Dancer</a>    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
