Added line up functionality

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,9 +12,10 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRedDancer">Add Red Dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlueDancer">Add Blue Dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeGreenDancer">Add Green Dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRedDancer">Add Red Dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlueDancer">Add Blue Dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeGreenDancer">Add Green Dancer</a>
+      <a href="#" class="addLineUpButton">Line Up Dancers</a>   </div>
     <script src="src/init.js"></script>
   </body>
 </html>
