--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,7 +17,7 @@
   <script src="spec/redDancerSpec.js"></script>
   <script src="spec/blueDancerSpec.js"></script>
   <script src="spec/greenDancerSpec.js"></script>
-  <script src="src/dancer.js"></script>
+  <script src="src/dancer.js"></script>           <!-- add all files -->
   <script src="src/redDancer.js"></script>
   <script src="src/blueDancer.js"></script>
   <script src="src/greenDancer.js"></script>
