--- a/dancefloor.html
+++ b/dancefloor.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
+      <span class="title">Dance Party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRedDancer">Add Red Dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlueDancer">Add Blue Dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlueDancer">Add Blue Dancer</a>   <!-- add several buttons -->
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeGreenDancer">Add Green Dancer</a>
       <a href="#" class="addLineUpButton">Line Up Dancers</a>   </div>
     <script src="src/init.js"></script>
